RESOLVED FIXED281117
ApplePayEnabled set in WKPreferences is ignored
https://bugs.webkit.org/show_bug.cgi?id=281117
Summary ApplePayEnabled set in WKPreferences is ignored
Sihui Liu
Reported 2024-10-08 22:10:00 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-08 22:13:15 PDT
Sihui Liu
Comment 2 2024-10-08 22:34:17 PDT
EWS
Comment 3 2024-10-09 13:53:31 PDT
Committed 284921@main (dc66f2d091a9): <https://commits.webkit.org/284921@main> Reviewed commits have been landed. Closing PR #34892 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.